examples/echo_sidecar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-sidecar
  labels:
    app.kubernetes.io/name: echo-sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echo-sidecar
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo-sidecar
    spec:
      containers:
        - name: echo
          image: ghcr.io/parente/goflarecar-echo:latest
          imagePullPolicy: Always
        - name: goflarecar
          image: ghcr.io/parente/goflarecar:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: proxy-port
