examples/echo_sidecar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-sidecar
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: echo-sidecar
  ports:
    - name: http
      port: 80
      targetPort: proxy-port
