examples/echo_sidecar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-sidecar
  labels:
    app.kubernetes.io/name: echo-sidecar
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - placeholder # To be replaced by a kustomize patch
      secretName: echo-sidecar-some-domain-tls
  rules:
    - host: placeholder # To be replaced by a kustomize patch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-sidecar
                port:
                  name: http
